<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".view.SignUpServiceProfileActivity">

    <EditText
        android:id="@+id/et_serviceName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/et_serviceName"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/et_ownerName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_owner"
        android:ems="10"
        android:hint="@string/et_ownerName"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_serviceName">

    </EditText>

    <EditText
        android:id="@+id/et_program"
        android:layout_width="365dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/et_program"
        android:inputType="textMultiLine"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_adresa"
        android:layout_width="365dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/et_adresa"
        android:inputType="textMultiLine"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_program" />

    <TextView
        android:id="@+id/TW_img"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/TW_img"
        android:textColor="@color/colorBlue"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adresa">

    </TextView>

    <Button
        android:id="@+id/BTN_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_config"
        android:text="@string/BTN_upload"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TW_img">

    </Button>


    <EditText
        android:id="@+id/et_descriereService"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/et_descriereService"
        android:inputType="textMultiLine"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cbox_Telefon" />

    <Button
        android:id="@+id/BTNprofileRegisterService2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_config"
        android:text="@string/BTNprofileRegisterService2"
        android:textColor="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descriereService"
        app:layout_constraintVertical_bias="0.897">

    </Button>

</android.support.constraint.ConstraintLayout>