<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".view.AddServicesListActivity">

    <Button
        android:id="@+id/BTNprofileRegisterService4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_config"
        android:text="@string/BTNprofileRegisterService4"
        android:textColor="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/BTN_adaugaService"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_config"
        android:text="@string/BTN_adaugaService"
        android:textColor="@color/colorBlue"
        app:layout_constraintBottom_toTopOf="@+id/BTNprofileRegisterService4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategorii"
        app:layout_constraintVertical_bias="1.0">

    </Button>

    <TextView
        android:id="@+id/tw_addServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tw_addServices"
        android:textColor="@color/colorBlue"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_denumireServiciu"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/et_denumireServiciu"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_addServices"></EditText>

    <EditText
        android:id="@+id/et_pretServiciu"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/et_pretServiciu"
        android:inputType="numberDecimal"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_denumireServiciu"></EditText>

    <Spinner
        android:id="@+id/spinnerCategorii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:textColor="@color/colorBlue"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pretServiciu" />

    <EditText
        android:id="@+id/et_detaliiServiciu"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="76dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/et_detaliiServiciu"
        android:inputType="text"
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorBlue"
        app:layout_constraintBottom_toTopOf="@+id/BTN_adaugaService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>